# GIPL-BMI-Fortran

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
GIPL/: CMakeLists.txt  bmi_main.f90  bmigiplf.f90  gipl.f90  main.f90
GIPL/examples/: CMakeLists.txt  change_air_temperature_ex.f90  conflicting_instances_ex.f90  get_value_ex.f90  info_ex.f90  irf_ex.f90  set_value_ex.f90  test.cfg  test2.cfg  vargrid_ex.f90
GIPL/tests/: CMakeLists.txt  fixtures.f90  test.cfg  test_finalize.f90  test_get_component_name.f90  test_get_current_time.f90  test_get_end_time.f90  test_get_grid_rank.f90  test_get_grid_shape.f90  test_get_grid_size.f90  test_get_grid_type.f90  test_get_input_var_names.f90  test_get_output_var_names.f90  test_get_start_time.f90  test_get_time_step.f90  test_get_time_units.f90  test_get_value.f90  test_get_var_type.f90  test_get_var_units.f90  test_initialize.f90  test_set_value.f90  test_update.f90  test_update_frac.f90  test_update_until.f90
GIPL/tests/in/: initial.txt  rsnow.txt  sites.txt
Notebooks/: Example_01_Basic_Use_GIPL.ipynb  Example_02_GIPL_ECSimpleSnow.ipynb
data/: gipl_config.cfg
data/in/: rsnow.txt
data/origin_out/: mean.txt.txt  result.txt.txt  start.txt.txt
data/output/: result.txt.txt
scripts/: update_rpaths.sh
